[update[ add quantization

--- a/main_f1.ipynb
+++ b/main_f1.ipynb
@@ -6734,6 +6734,80 @@
     "\n",
     "f1, precision, recall, probs, labels = test_model(model, test_loader, criterion, device)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75a4a9c1",
+   "metadata": {},
+   "source": [
+    "## 24. Static Post-Training Quantization\n",
+    "\n",
+    "Converts the trained float32 model to **INT8** using PyTorch's static post-training quantization, reducing model size by ~75 % and improving inference latency with no additional training.\n",
+    "\n",
+    "### Why a subclass?\n",
+    "\n",
+    "`HeyLoraNetQuantizable` wraps the original model adding two required boundary markers:\n",
+    "\n",
+    "- **`QuantStub`** – entry point: signals PyTorch to convert the input tensor from float32 → INT8 before the first layer.\n",
+    "- **`DeQuantStub`** – exit point: converts INT8 → float32 after the last layer, so the output is compatible with standard float operations (e.g. `softmax`, `argmax`).\n",
+    "\n",
+    "`strict=False` is used in `load_state_dict` because the original checkpoint has no weights for the two stubs, which are stateless markers.\n",
+    "\n",
+    "### Calibration\n",
+    "\n",
+    "`quantization.prepare()` attaches **observers** to every quantizable layer. The model is then run through the validation set under `torch.no_grad()` — no gradient computation is needed, only forward passes. Each observer records the min/max range of values passing through its layer and uses them to compute the optimal **scale** and **zero-point** for the float32 → INT8 mapping.\n",
+    "\n",
+    "> The more representative the calibration data, the more accurate the quantized model.\n",
+    "\n",
+    "### Convert\n",
+    "\n",
+    "`quantization.convert()` uses the collected statistics to replace each float32 layer with its INT8 counterpart. From this point all intermediate computations run in INT8; the stubs handle the precision conversion at the boundaries.\n",
+    "\n",
+    "| Setting | Value | Note |\n",
+    "|---|---|---|\n",
+    "| `qconfig` | `\"qnnpack\"` | Optimised for ARM CPUs (Raspberry Pi, mobile) |\n",
+    "| `quantized.engine` | `\"qnnpack\"` | Must match `qconfig` — set globally before quantization and inference |\n",
+    "| Precision | INT8 | ~4× smaller than float32, faster on compatible hardware |\n",
+    "| Calibration set | Validation loader | Representative of real-world inputs |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "543a1478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import quantization\n",
+    "\n",
+    "class HeyLoraNetQuantizable(HeyLoraNet):\n",
+    "    def __init__(self, n_mels=64, hidden_size=128, num_layers=2, dropout=0.3):\n",
+    "        super().__init__(n_mels, hidden_size, num_layers, dropout)\n",
+    "        self.quant = quantization.QuantStub()\n",
+    "        self.dequant = quantization.DeQuantStub()\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.quant(x)\n",
+    "        x = super().forward(x)\n",
+    "        x = self.dequant(x)\n",
+    "        return x\n",
+    "\n",
+    "torch.backends.quantized.engine = \"qnnpack\"\n",
+    "\n",
+    "model = HeyLoraNetQuantizable()\n",
+    "model.load_state_dict(torch.load(\"modello_17.pth\")[\"model_state_dict\"], strict=False)\n",
+    "model.eval()\n",
+    "\n",
+    "model.qconfig = quantization.get_default_qconfig(\"qnnpack\")\n",
+    "quantization.prepare(model, inplace=True)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for spectrogram, _ in val_loader:\n",
+    "        model(spectrogram)\n",
+    "\n",
+    "quantization.convert(model, inplace=True)\n",
+    "torch.save(model.state_dict(), \"modello_quantized_rpi.pth\")"
+   ]
   }
  ],
  "metadata": {
